--- a/wifi_app/app/src/main/AndroidManifest.xml
+++ b/wifi_app/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
 
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
     <application
         android:allowBackup="true"
@@ -38,12 +40,14 @@
             android:label="@string/app_name" >
         </activity>
         
-     <activity
-            android:name=".FloorActivity"
+        <activity
+            android:name=".KmeansActivity"
             android:label="@string/app_name" >
         </activity>
-        
-
+        <activity
+            android:name=".ShowDatas"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
