--- a/wifi_app/app/build.gradle
+++ b/wifi_app/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
+    compileSdkVersion 24
     buildToolsVersion "29.0.2"
 
     defaultConfig {
         applicationId "com.example.wifi_info"
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 17
 
         testApplicationId "com.example.wifi_info.test"
@@ -22,5 +22,17 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:20.+'
+    compile 'com.android.support:appcompat-v7:24.2.1'
 }
+/*
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    //compile 'com.android.support:appcompat-v7:25.4.0'
+    //compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+
+    compile 'com.estimote:sdk:0.13.0@aar'
+    // compile 'com.estimote:sdk:1.0.3@aar'
+}
+*/
